--- a/templates/edit_index.html
+++ b/templates/edit_index.html
@@ -117,7 +117,7 @@
 
             <ul class="nav nav-tabs flex-lg-column" role="tablist">
                 <li class="nav-item">
-                    <a class="nav-link active" id="profile_tab_link" data-toggle="tab" href="#profile_tab" role="tab" aria-controls="profile_tab" aria-selected="true">Профиль</a>
+                    <a class="nav-link active" id="profile_tab_link" data-toggle="tab" href="/" role="tab" aria-controls="profile_tab" aria-selected="true">Профиль</a>
                     <a class="nav-link d-none " id="education_tab_link" data-toggle="tab" href="#education_tab" role="tab" aria-controls="education_tab" aria-selected="true">Образование</a>
                     <a class="nav-link d-none" id="work_tab_link" data-toggle="tab" href="#work_tab" role="tab" aria-controls="work_tab" aria-selected="true">Работа</a>
                 </li>
@@ -149,13 +149,13 @@
                                 <input type="hidden" name="_token" value="stGTVgTjMMapCM9aA90ELX60eEijvoK9c4mEf7J2">                                <div class="form-group row align-items-start">
                                     <label class="col-4">Фамилия</label>
                                     <div class="col">
-                                        <input type="text" placeholder="" value="{{ ii }}" name="last_name" class="form-control" required="">
+                                        <input type="text" placeholder="" value="{{ fi }}" name="last_name" class="form-control" required="">
                                     </div>
                                 </div>
                                 <div class="form-group row align-items-start">
                                     <label class="col-4">Имя</label>
                                     <div class="col">
-                                        <input type="text" required="" placeholder="" value="{{ fi }}" name="first_name" class="form-control">
+                                        <input type="text" required="" placeholder="" value="{{ ii }}" name="first_name" class="form-control">
                                     </div>
                                 </div>
                                 <div class="form-group row align-items-start">
