--- a/templates/login.html
+++ b/templates/login.html
@@ -1,73 +1,286 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
 <head>
-	<title>Login Page</title>
-	<style>
-		form {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			padding-top: 50px;
-		}
+   <style>
+    .log-in:hover{
+      background-color: rgba(3,3,3,1);
+    }
+    html { 
+      background: url({{ url_for('static', filename='header.jpg') }}) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow: hidden;
+}
 
-		input[type="text"], input[type="password"], button {
-			margin: 10px;
-			padding: 10px;
-			font-size: 16px;
-			border-radius: 5px;
-			border: none;
-		}
+button:hover{
+  pointer-events: visiblePainted;
+  cursor: pointer;
+}
 
-		button {
-			background-color: #4CAF50;
-			color: white;
-			cursor: pointer;
-		}
+img{
+  display: block;
+  margin: auto;
+  width: 100%;
+  height: auto;
+}
 
-		.message {
-			color: red;
-			font-size: 14px;
-			margin-top: 10px;
-		}
-	</style>
-	<script src="/static/socket.io.min.js"></script>
-    <script>
-        var socket = io();
+#login-button{
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 30px;
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background: rgba(3,3,3,1);
+  overflow: hidden;
+  opacity: 1;
+  box-shadow: 10px 10px 30px #000;}
 
-    </script>
+/* Login container */
+#container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 260px;
+  height: 260px;
+  border-radius: 5px;
+  background: rgba(3,3,3,0.90);
+  box-shadow: 1px 1px 50px #000;
+  display: none;
+}
+
+.close-btn{
+  position: absolute;
+  cursor: pointer;
+  font-family: 'Open Sans Condensed', sans-serif;
+  line-height: 18px;
+  top: 3px;
+  right: 3px;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  border-radius: 10px;
+  opacity: .2;
+  -webkit-transition: all 2s ease-in-out;
+  -moz-transition: all 2s ease-in-out;
+  -o-transition: all 2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.close-btn:hover{
+  opacity: 1;
+}
+
+/* Heading */
+h1{
+  font-family: 'Open Sans Condensed', sans-serif;
+  position: relative;
+  margin-top: 0px;
+  text-align: center;
+  font-size: 40px;
+  color: #ddd;
+  text-shadow: 3px 3px 10px #000;
+}
+
+/* Inputs */
+button,
+input{
+  font-family: 'Open Sans Condensed', sans-serif;
+  text-decoration: none;
+  position: relative;
+  width: 80%;
+  display: block;
+  margin: 9px auto;
+  font-size: 17px;
+  color: #fff;
+  padding: 8px;
+  border-radius: 6px;
+  border: none;
+  background: rgba(3,3,3,.1);
+  -webkit-transition: all 2s ease-in-out;
+  -moz-transition: all 2s ease-in-out;
+  -o-transition: all 2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+input:focus{
+  outline: none;
+  box-shadow: 3px 3px 10px #333;
+  background: rgba(3,3,3,.18);
+}
+
+/* Placeholders */
+::-webkit-input-placeholder {
+   color: #ddd;  }
+:-moz-placeholder { /* Firefox 18- */
+   color: #ddd;  }
+::-moz-placeholder {  /* Firefox 19+ */
+   color: #ddd;  }
+:-ms-input-placeholder {  
+   color: #333;  }
+
+/* Link */
+button{
+  font-family: 'Open Sans Condensed', sans-serif;
+  text-align: center;
+  padding: 4px 8px;
+  background: rgba(107,255,3,0.3);
+}
+
+button:hover{
+  opacity: 1;
+}
+
+#remember-container{
+  position: relative;
+  margin: -5px 20px;
+}
+
+.checkbox {
+  position: relative;
+  cursor: pointer;
+  -webkit-appearance: none;
+  padding: 5px;
+  border-radius: 4px;
+  background: rgba(3,3,3,.2);
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+}
+
+.checkbox:checked:active {
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+}
+
+.checkbox:checked {
+  background: rgba(3,3,3,.4);
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.5);
+  color: #fff;
+}
+
+.checkbox:checked:after {
+  content: '\2714';
+  font-size: 10px;
+  position: absolute;
+  top: 0px;
+  left: 4px;
+  color: #fff;
+}
+
+#remember{
+  position: absolute;
+  font-size: 13px;
+  font-family: 'Hind', sans-serif;
+  color: rgba(255,255,255,.5);
+  top: 7px;
+  left: 20px;
+}
+
+#forgotten{
+  position: absolute;
+  font-size: 12px;
+  font-family: 'Hind', sans-serif;
+  color: rgba(255,255,255,.2);
+  right: 0px;
+  top: 8px;
+  cursor: pointer;
+  -webkit-transition: all 2s ease-in-out;
+  -moz-transition: all 2s ease-in-out;
+  -o-transition: all 2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+#forgotten:hover{
+  color: rgba(255,255,255,.6);
+}
+
+#forgotten-container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 260px;
+  height: 180px;
+  border-radius: 10px;
+  background: rgba(3,3,3,0.25);
+  box-shadow: 1px 1px 50px #000;
+  display: none;
+}
+
+.orange-btn{
+  background: rgba(87,198,255,.5);
+}
+</style>
+  <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  <title>Welcome</title>
+  <meta charset="UTF-8">
+  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+  
+
+  <script src="{{ url_for('static', filename='socket.io.min.js') }}"></script>
+  <script>
+    var socket = io();
+
+  </script>
 </head>
 <body>
-	<form action="/login" method="post">
-		<label for="username">Username:</label>
-		<input type="text" id="username" name="username" required>
-
-		<label for="password">Password:</label>
-		<input type="password" id="password" name="password" required>
-
-		<button type="submit">Login</button><button onclick="window.location.href = '/register';">Registr</button>
-
-		<p class="message">{{ message }}</p>
-	</form>
-
-<script type="text/javascript">
-	// Redirect to profile page after successful login
-if (window.location.pathname === '/login') {
-  const form = document.querySelector('form');
-  form.addEventListener('submit', async (event) => {
-    event.preventDefault();
-    const formData = new FormData(form);
-    const response = await fetch('/login', {
-      method: 'POST',
-      body: formData,
+  <div id="login-button">
+    <img src="https://dqcgrsy5v35b9.cloudfront.net/cruiseplanner/assets/img/icons/login-w-icon.png">
+  </div>
+  <div id="container">
+    <h1>Log In</h1>
+    <span class="close-btn">
+      <img src="https://cdn4.iconfinder.com/data/icons/miu/22/circle_close_delete_-128.png">
+    </span>
+    <form method="POST" action="{{ url_for('login') }}">
+      <input type="text" name="username" placeholder="Username" required="">
+      <input type="password" name="password" placeholder="Password" required="">
+      <button type="submit" name="submit" style="background-color: #85b266;" class="log-in">Войти</button>
+      <div id="remember-container">
+        <button style="background-color: #af6674;" onclick="window.location.href='/register';">Регистрация</button>
+      </div>
+    </form>
+  </div>
+  <div id="message"><!--Section for JS code. Stop Bot without JS :) --> {{ message|safe }} </div>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js'></script>
+  <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script  src="{{ url_for('static', filename='script.js') }}"></script>
+  <script>
+    $('#login-button').click(function(){
+      $('#login-button').fadeOut("slow",function(){
+        $("#container").fadeIn();
+        TweenMax.from("#container", 1, { scale: 0, ease:Sine.easeInOut});
+        TweenMax.to("#container", 1, { scale: 1, ease:Sine.easeInOut});
+      });
     });
-    if (response.ok) {
-      window.location.href = '/';
-    } else {
-      const message = document.querySelector('.message');
-      message.textContent = 'Incorrect username or password';
-    }
-  });
-}
-</script>
+    $(".close-btn").click(function(){
+      TweenMax.from("#container", 1, { scale: 1, ease:Sine.easeInOut});
+      TweenMax.to("#container", 1, { left:"0px", scale: 0, ease:Sine.easeInOut});
+      $("#container, #forgotten-container").fadeOut(800, function(){
+        $("#login-button").fadeIn(800);
+      });
+    });
+    $('#forgotten').click(function(){
+      $("#container").fadeOut(function(){
+        $("#forgotten-container").fadeIn();
+      });
+    });
+  </script>
+ 
 </body>
 </html>
