--- a/templates/index.html
+++ b/templates/index.html
@@ -37,14 +37,11 @@
         <img alt="" src="index_files/pro-logo-white.svg">
     </a>
     <div class="d-flex align-items-center">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
+        <button onclick="document.getElementById('show-menu').classList.remove('show');document.getElementById('navbar-collapse').classList.toggle('show');document.getElementById('dlg-block').classList.toggle('d-none');" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="d-block d-lg-none ml-2">
             <div class="dropdown">
-                <a href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img alt="Image" src="index_files/user_icon.svg" class="avatar">
-                </a>
                 <div class="dropdown-menu dropdown-menu-right">
                     <a href="/" class="dropdown-item">Профиль</a>
                     <a href="/logout" class="dropdown-item">Выход</a>
@@ -62,14 +59,14 @@
 
 
         <hr>
-        <div class="d-none d-lg-block w-100">
+        <div id="dlg-block" class="d-none d-lg-block w-100">
             <span class="text-small text-muted">Полезное</span>
             <ul class="nav nav-small flex-column mt-2">
                 <li class="nav-item"> 
                     <a class="nav-link" target="_blank" href="/chat">Анонимный чат</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/req" target="_blank" class="nav-link">Разработчик</a>
+                    <a href="https://github.com/geekAmis/AnonymouseChat" target="_blank" class="nav-link">GitHub проекта</a>
                 </li>   
                 <li class="nav-item">
                     <a href="/payment?from=/" target="_blank" class="nav-link">Донат</a>
@@ -93,8 +90,8 @@
 
         </div>
     </div>
-    <div class="d-none d-lg-block">
-        <div class="dropup" onclick="document.getElementById('show-menu').classList.toggle('show');">
+    <div class=" d-lg-block">
+        <div class="dropup" onclick="document.getElementById('show-menu').classList.toggle('show');document.getElementById('navbar-collapse').classList.add('show');document.getElementById('dlg-block').classList.remove('d-none');">
             <a href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <img alt="Image" src="index_files/3390ad36f1914b32838f55683c95a1f4_00000-thumb.jpg" class="avatar">
             </a>
@@ -129,7 +126,7 @@
 
             <div class="row">
                                                     <div class="col-12">
-                        <h4>Участие в движении</h4>
+                        <h4>Новости</h4>
                                                     <div class="card card-task col-12 card-hoverable">
 
                                 <div class="card-body">
